samples/_failures_safe/1761308793_50d235_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4476b5d.c: In function ‘main’:
./samples/SAFE/__tmp_c4476b5d.c:136:5: error: expected expression at end of input
  136 |     if (!read_size_t(&rows2) || !read_size_t(&cols2) || rows2 == 0 ||
      |     ^~
./samples/SAFE/__tmp_c4476b5d.c:136:5: error: expected declaration or statement at end of input
